# hybrid-risk-sme-microcap

./: .gitignore  README.md  pyproject.toml
Learning_working_directory/: Day1-README.md
Learning_working_directory/01-Financial-Foundations/: 00-SUPER-WORKBOOK-DAY-1.md  01-The-Accounting-Equation.md  02-Liquidity-Hierarchy.md  03-CapEx-OpEx-COGS.md  04-LTV-and-Collateral.md  05-Precision-Engineering.md  06-Pending-Clarifications.md  07-Derived-Metrics-Dictionary.md  08-Senior-Fintech-Glossary.md  09-Acronym-Bible.md  10-Defense-Layers.md
Learning_working_directory/02-Income-Statement-Anatomy/: 01-Income-Statement-Notes.md
Learning_working_directory/03-Cash-Flow-Anatomy/: 01-Cash-Flow-Notes.md  02-Credit-Officer-KPIs.md  03-Koss-Full-Analysis-Exercise.md  04-Master-Formula-Reference.md
Learning_working_directory/0Z-Future-Work/: 01-Predictive-Models-Plan.md
docs/: 00-EXECUTIVE-SUMMARY.md  01-ARCHITECTURE.md  02-12-WEEK-MASTER-PLAN.md  03-FINANCIAL-LEARNING-PATH.md  04-CAREER-ROADMAP.md  05-DUAL-ENGINE-STRATEGY.md  06-TECH-STACK-RATIONALE.md
files to review/: 00-PROMPT.md  01-EstrategiaMacroGemini.md  02-EstrategiaMacroGPT5.2.md  04-Arquitectura-a-evaluar.md  05-estrategia-profesional.md  Repo-context-structure.md
src/models/: experiments_boilerplate.py
src/schemas/: financial_data.py  time_series_risk.py
tests/: test_balance_sheet.py  test_cash_flow.py  test_income_statement.py
