[project]
name = "hybrid-risk-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Arian Stoned",email = "ariantu16@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
